<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="60pt"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/txtDN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/s_DangNhap"
        android:textSize="11pt"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="#72D4FF"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view"
        />
    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/s_tk"

        app:layout_constraintBaseline_toBaselineOf="@+id/txtUsername"
        app:layout_constraintEnd_toStartOf="@id/tvUsername"
        app:layout_constraintStart_toStartOf="parent"


        />
    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="0pt"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/tvUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtDN"

        />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/s_mk"

        app:layout_constraintBaseline_toBaselineOf="@+id/txtPassword"
        app:layout_constraintEnd_toStartOf="@id/txtPassword"
        app:layout_constraintStart_toStartOf="parent"
        />
    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="0pt"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/tvPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtUsername"/>

    <CheckBox
        android:id="@+id/checkboxRememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/s_ghinho"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintTop_toBottomOf="@id/txtPassword"/>
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/s_btndn"
        android:background="#FFEAB1"
        app:layout_constraintTop_toBottomOf="@id/checkboxRememberMe"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>