<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="1">

        <ImageView
            android:src="@mipmap/ic_launcher"
            android:id="@+id/imgSach"
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:layout_weight=".4" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight=".6">

            <TextView
                android:id="@+id/txtMasach"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s_masach"
                android:textSize="10pt"
                android:textStyle="bold"

                />

            <TextView
                android:id="@+id/txtTenSach"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s_tensach"
                android:textSize="11pt" />

            <TextView
                android:id="@+id/txtTheLoai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s_theloai"
                android:textSize="11pt" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>