<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SachActivity"
    android:weightSum="1">
    <ImageView
        android:src="@mipmap/ic_launcher"
        android:id="@+id/imgSach_Sach"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right">
    <Button
        android:id="@+id/btnThuVien_Sach"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:backgroundTint="@color/purple_200"
        android:text="Thư viện" />
        <Button
            android:id="@+id/btnCamera_Sach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:backgroundTint="@color/purple_200"
            android:text="Camera" />
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/s_masach"
            android:textSize="10pt"
            android:textAlignment="center"
            android:layout_weight="3"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtMasach"

            android:textSize="10pt"
            android:layout_weight="7"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/s_tensach"
            android:textAlignment="center"
            android:textSize="10pt"
            android:layout_weight="3"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtTenSach"
            android:textSize="10pt"
            android:layout_weight="7"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/s_theloai"
            android:textAlignment="center"
            android:textSize="10pt"
            android:layout_weight="3"/>

        <Spinner
            android:id="@+id/snTheLoai"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:spinnerMode="dropdown"
            android:textSize="20dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/s_tacgia"

            android:textSize="10pt"
            android:layout_weight="3"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtTacGia"
            android:textSize="10pt"
            android:layout_weight="7"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/s_nhaxuatban"

            android:textSize="10pt"
            android:layout_weight="3"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtNhaXuatBan"
            android:textSize="10pt"
            android:layout_weight="7"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btnLuu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:text="@string/s_luu"
            android:textSize="10pt"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>